@@ -139,10 +139,49 @@ struct XAPIAN_VISIBILITY_DEFAULT LatLongCoord {
     std::string get_description() const;
 };
 
+/// An iterator across the values in a LatLongCoords object.
+class XAPIAN_VISIBILITY_DEFAULT LatLongCoordsIterator {
+    /// Friend class which needs to be able to construct us.
+    friend class LatLongCoords;
 
-// Forward declaration.
-class LatLongCoordsIterator;
+    /// The current position of the iterator.
+    std::vector<LatLongCoord>::const_iterator iter;
 
+    /// Constructor used by LatLongCoords.
+    LatLongCoordsIterator(std::vector<LatLongCoord>::const_iterator iter_)
+	    : iter(iter_) {}
+
+  public:
+    /// Default constructor.  Produces an uninitialised iterator.
+    LatLongCoordsIterator() {}
+
+    const LatLongCoord & operator *() const {
+	return *iter;
+    }
+
+    LatLongCoordsIterator & operator++() {
+	++iter;
+	return *this;
+    }
+
+    DerefWrapper_<LatLongCoord> operator++(int) {
+	const LatLongCoord & tmp = **this;
+	++iter;
+	return DerefWrapper_<LatLongCoord>(tmp);
+    }
+
+    bool operator==(const LatLongCoordsIterator &other) const
+    {
+	return iter == other.iter;
+    }
+
+    // Allow use as an STL iterator
+    typedef std::input_iterator_tag iterator_category;
+    typedef LatLongCoord value_type;
+    typedef size_t difference_type;
+    typedef LatLongCoord * pointer;
+    typedef LatLongCoord & reference;
+};
 
 /// A sequence of latitude-longitude coordinates.
 class XAPIAN_VISIBILITY_DEFAULT LatLongCoords {
@@ -151,10 +190,14 @@ class XAPIAN_VISIBILITY_DEFAULT LatLongCoords {
 
   public:
     /// Get a begin iterator for the coordinates.
-    LatLongCoordsIterator begin() const;
+    LatLongCoordsIterator begin() const {
+	return LatLongCoordsIterator(coords.begin());
+    }
 
     /// Get an end iterator for the coordinates.
-    LatLongCoordsIterator end() const;
+    LatLongCoordsIterator end() const {
+	return LatLongCoordsIterator(coords.end());
+    }
 
     /// Get the number of coordinates in the container.
     size_t size() const
@@ -200,61 +243,6 @@ class XAPIAN_VISIBILITY_DEFAULT LatLongCoords {
     /// Return a string describing this object.
     std::string get_description() const;
 };
-
-
-/// An iterator across the values in a LatLongCoords object.
-class XAPIAN_VISIBILITY_DEFAULT LatLongCoordsIterator {
-    /// Friend class which needs to be able to construct us.
-    friend class LatLongCoords;
-
-    /// The current position of the iterator.
-    std::vector<LatLongCoord>::const_iterator iter;
-
-    /// Constructor used by LatLongCoords.
-    LatLongCoordsIterator(std::vector<LatLongCoord>::const_iterator iter_)
-	    : iter(iter_) {}
-
-  public:
-    /// Default constructor.  Produces an uninitialised iterator.
-    LatLongCoordsIterator() {}
-
-    const LatLongCoord & operator *() const {
-	return *iter;
-    }
-
-    LatLongCoordsIterator & operator++() {
-	++iter;
-	return *this;
-    }
-
-    DerefWrapper_<LatLongCoord> operator++(int) {
-	const LatLongCoord & tmp = **this;
-	++iter;
-	return DerefWrapper_<LatLongCoord>(tmp);
-    }
-
-    bool operator==(const LatLongCoordsIterator &other) const
-    {
-	return iter == other.iter;
-    }
-
-    // Allow use as an STL iterator
-    typedef std::input_iterator_tag iterator_category;
-    typedef LatLongCoord value_type;
-    typedef size_t difference_type;
-    typedef LatLongCoord * pointer;
-    typedef LatLongCoord & reference;
-};
-
-inline LatLongCoordsIterator LatLongCoords::begin() const
-{
-    return LatLongCoordsIterator(coords.begin());
-}
-
-inline LatLongCoordsIterator LatLongCoords::end() const
-{
-    return LatLongCoordsIterator(coords.end());
-}
 
 /// Inequality test for LatLongCoordsIterator objects.
 inline bool
